# codephys

./: .clang-format  .gitattributes  .gitignore  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  REFERENCES.bib
.claude/skills/commit/: SKILL.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp
app/scenes/: ch03_projectile.cpp  ch03_projectile.hpp  integrator_comparison.cpp  integrator_comparison.hpp
cmake/: warnings.cmake
docs/: REFERENCES.md
docs/design/: DESIGN.md
docs/study-guide/: 01-vectors-units-and-si.md  02-kinematics-and-projectile-motion.md  03-newtons-laws-and-acceleration.md  04-energy-momentum-and-conservation.md  05-numerical-integration.md  06-gravitation-and-orbits.md  07-the-simulation-loop-and-time.md  08-architecture-rendering-and-ui.md  README.md
openspec/: config.yaml
openspec/changes/archive/2026-06-15-phase-0-skeleton/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-15-phase-0-skeleton/specs/build-system/: spec.md
openspec/changes/archive/2026-06-15-phase-0-skeleton/specs/platform-window/: spec.md
openspec/changes/archive/2026-06-16-phase-1-math-and-minimal-ui/: design.md  tasks.md
openspec/changes/archive/2026-06-16-phase-1-math-and-minimal-ui/specs/physics-core/: spec.md
openspec/changes/archive/2026-06-16-phase-1-math-and-minimal-ui/specs/physics-math/: spec.md
openspec/changes/archive/2026-06-16-phase-1-math-and-minimal-ui/specs/simulation-loop/: spec.md
openspec/changes/phase-1-math-and-minimal-ui/: proposal.md  tasks.md
openspec/changes/phase-1-math-and-minimal-ui/specs/renderer-2d/: spec.md
openspec/changes/phase-1-math-and-minimal-ui/specs/scene-gallery/: spec.md
openspec/changes/phase-1-math-and-minimal-ui/specs/ui-toolkit/: spec.md
openspec/specs/build-system/: spec.md
openspec/specs/physics-core/: spec.md
openspec/specs/physics-math/: spec.md
openspec/specs/platform-window/: spec.md
openspec/specs/renderer-2d/: spec.md
openspec/specs/scene-gallery/: spec.md
openspec/specs/simulation-loop/: spec.md
openspec/specs/ui-toolkit/: spec.md
physics/: CMakeLists.txt
physics/include/physics/: math.hpp
physics/include/physics/core/: integrator.hpp  particle.hpp  world.hpp
physics/include/physics/math/: constants.hpp  mat3.hpp  mat4.hpp  quat.hpp  units.hpp  vec2.hpp  vec3.hpp  vec4.hpp
physics/src/: integrator.cpp  math.cpp  world.cpp
platform/: CMakeLists.txt
platform/include/platform/: window.hpp
platform/src/: window.cpp
render/: CMakeLists.txt
render/include/render/: camera2d.hpp  color.hpp  render.hpp  renderer.hpp
render/src/: font8x8_basic.h  render.cpp  renderer.cpp
tests/: CMakeLists.txt  test_main.cpp  test_math.cpp  test_physics.cpp
ui/: CMakeLists.txt
ui/include/ui/: input.hpp  ui.hpp
ui/src/: ui.cpp
